test/types/typedefs/bradc/redefineTypeNames.good
redefineTypeNames.chpl:1: In function 'main':
redefineTypeNames.chpl:3: error: Variable name 'int' is a reserved word
redefineTypeNames.chpl:4: error: Variable name 'real' is a reserved word
redefineTypeNames.chpl:5: error: Variable name 'bool' is a reserved word
redefineTypeNames.chpl:6: error: Variable name 'string' is a reserved word
redefineTypeNames.chpl:7: error: Variable name 'complex' is a reserved word
redefineTypeNames.chpl:8: error: Variable name 'imag' is a reserved word
redefineTypeNames.chpl:18: error: Variable name 'int' is a reserved word
redefineTypeNames.chpl:20: error: Variable name 'imag' is a reserved word
redefineTypeNames.chpl:22: error: Variable name 'complex' is a reserved word
